[package]
name = "qqwry"
version = "0.1.0"
authors = ["zhangfanhang <mefly@qq.com>"]
edition = "2018"
description = "search ip address with qqwry.data using rust"
readme = "README.md"
license = "MIT"
license-file = "LICENSE.txt"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
textcode = "0.2.1"
